--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -146,7 +146,7 @@ jobs:
       max-parallel: 5
       matrix:
         test: ${{ fromJson(needs.setup-backend-assemblers.outputs.tests) }}
-    name: backend/pkg/assemblers/${{ matrix.test.file }} - Tests
+    name: ${{ matrix.test.file }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -182,7 +182,6 @@ jobs:
   test-backend-rest:
     name: backend (excluding assemblers) - Tests
     runs-on: ubuntu-latest
-    needs: test-backend-assemblers
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v5
