--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -182,6 +182,7 @@ jobs:
   test-backend-rest:
     name: backend (excluding assemblers) - Tests
     runs-on: ubuntu-latest
+    needs: setup-backend-assemblers
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v5
