Modified prometheus and grafana sampling rate. Added tracing to CRL creation
Signed-off-by: David Gilarranz Ortega <dgilarranz@ikerlan.es>
Signed-off-by: hsaizsierra <hsaizsierra@gmail.com>

--- a/otel/grafana-datasources.yaml
+++ b/otel/grafana-datasources.yaml
@@ -10,9 +10,10 @@ datasources:
   basicAuth: false
   isDefault: false
   version: 1
-  editable: false
+  editable: true
   jsonData:
     httpMethod: GET
+  timeInterval: 1s
 # - name: Tempo
 #   type: tempo
 #   access: proxy
