--- a/.github/workflows/release_finalize.yaml
+++ b/.github/workflows/release_finalize.yaml
@@ -204,7 +204,7 @@ jobs:
     needs: [create_module_release, finalize]
     strategy:
       matrix:
-        service: [ca, devmanager, dmsmanager, va, alerts, aws-connector]
+        service: [kms, ca, devmanager, dmsmanager, va, alerts, aws-connector, goose-lamassu]
     name: ${{ matrix.service }} - Release docker images
     runs-on: ubuntu-latest
     environment: release
