chore: add bump_versions job that runs before tagging
Signed-off-by: Jon Galipienzo <jgalipienzo@lksnext.com>

--- a/.github/workflows/release_finalize.yaml
+++ b/.github/workflows/release_finalize.yaml
@@ -5,11 +5,11 @@ on:
   push:
     branches: [main]
     paths:
-      - 'CHANGELOG.md'   # optional: run only when CHANGELOG.md changed
-      - 'RELEASE-NOTES.md'   # optional: run only when RELEASE-NOTES.md changed
+      - "CHANGELOG.md" # optional: run only when CHANGELOG.md changed
+      - "RELEASE-NOTES.md" # optional: run only when RELEASE-NOTES.md changed
 
 env:
-  RELEASE_VERSION: ""  # Global variable to be set by extract_version job
+  RELEASE_VERSION: "" # Global variable to be set by extract_version job
 
 jobs:
   extract_version:
@@ -28,7 +28,7 @@ jobs:
         run: |
           msg="$(git log -1 --pretty=%s)"
           echo "Last commit: $msg"
-          
+
           # Check if this is a release commit
           if [[ "$msg" =~ ^chore:\ release:\ prepare\ release\ ([0-9]+\.[0-9]+\.[0-9]+).*$ ]]; then
             version="${BASH_REMATCH[1]}"
@@ -52,12 +52,42 @@ jobs:
             exit 1
           fi
 
-  finalize:
-    name: Setup Release Variables
+  bump_versions:
+    name: Bump Module Versions
     needs: extract_version
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: main
+          token: ${{ secrets.PAT_RELEASER }}
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "^1.24.3"
+
+      - name: Bump versions in go.mod files
+        run: |
+          chmod +x scripts/bump-version.sh
+          ./scripts/bump-version.sh ${{ needs.extract_version.outputs.release_version }}
+
+      - name: Commit version bump
+        run: |
+          git config user.name "Lamassu IoT Bot"
+          git config user.email "lamassuiot@lamassu.io"
+          git add .
+          git commit -m "chore: bump module versions to v${{ needs.extract_version.outputs.release_version }}"
+          git push origin main
+
+  finalize:
+    name: Setup Release Variables
+    needs: [extract_version, bump_versions]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: main
 
       - name: Setup Modules Matrix
         id: matrix
@@ -103,7 +133,7 @@ jobs:
       release_version: ${{ needs.extract_version.outputs.release_version }}
       release_version_with_v: ${{ needs.extract_version.outputs.release_version_with_v }}
       json_modules: ${{ steps.matrix.outputs.json_modules }}
- 
+
   create_global_release:
     name: Create Global Tag & Release
     needs: finalize
@@ -113,7 +143,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: main
-      
+
       - name: Create Tag
         run: |
           git config user.name "Lamassu IoT Bot"
@@ -140,7 +170,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '^1.24.3' # The Go version to download (if necessary) and use.
+          go-version: "^1.24.3" # The Go version to download (if necessary) and use.
       - name: Build release assets # This would actually build your project, using zip for an example artifact
         run: |
           go work vendor
@@ -204,7 +234,17 @@ jobs:
     needs: [create_module_release, finalize]
     strategy:
       matrix:
-        service: [kms, ca, devmanager, dmsmanager, va, alerts, aws-connector, lamassu-db-migration]
+        service:
+          [
+            kms,
+            ca,
+            devmanager,
+            dmsmanager,
+            va,
+            alerts,
+            aws-connector,
+            lamassu-db-migration,
+          ]
     name: ${{ matrix.service }} - Release docker images
     runs-on: ubuntu-latest
     environment: release
@@ -217,7 +257,7 @@ jobs:
       - run: |
           echo "SHA1VER=$(git rev-parse HEAD)" >> $GITHUB_ENV
       - name: Login to Github Registry
-        uses: docker/login-action@v3 
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
